added swagger documentation on todosrouter
