# routes/todos.js
@@ -9,6 +9,11 @@ const todoService = new TodoService(db);
 /* Return all the logged in users todo's with the category associated with each todo and
 status that is not the deleted status */
 router.get('/', isAuth, async (req, res) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'get all the logged in users todo\'s with the category associated with each todo and status that is not the deleted status'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[200]
+
   const { id: UserId } = res.locals.tokenData;
   const data = await todoService.getAllByUserButNotDeleted(UserId);
   res.jsend.success({ statusCode: 200, result: data });
@@ -16,6 +21,11 @@ router.get('/', isAuth, async (req, res) => {
 
 // Return all the users todos including todos with a deleted status
 router.get('/all', isAuth, async (req, res) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Get all the users todos including todos with a deleted status'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[200]
+
   const { id: UserId } = res.locals.tokenData;
   const data = await todoService.getAllByUser(UserId);
   res.jsend.success({ statusCode: 200, result: data });
@@ -23,6 +33,10 @@ router.get('/all', isAuth, async (req, res) => {
 
 // Return all the todos with the deleted status
 router.get('/deleted', isAuth, async (req, res) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Get all the todos with the deleted status'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[200]
   const { id: UserId } = res.locals.tokenData;
   const data = await todoService.getDeletedByUser(UserId);
   res.jsend.success({ statusCode: 200, result: data });
@@ -30,6 +44,20 @@ router.get('/deleted', isAuth, async (req, res) => {
 
 // Add a new todo with their category for the logged in user
 router.post('/', isAuth, async (req, res, next) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Add a new todo with their category for the logged in user'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[201,400]
+  /* #swagger.parameters['body']={
+    "name":"body",
+    "in":"body",
+    "schema":{
+      $ref:"#/definitions/Todos"
+    }
+  }
+
+  */
+
   const { name, description, CategoryId, StatusId, UserId } = req.body;
   if (
     name == null ||
@@ -46,12 +74,29 @@ router.post('/', isAuth, async (req, res, next) => {
 
 // Return all the statuses from the database
 router.get('/statuses', isAuth, async (req, res) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Return all the statuses from the database'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[200]
   const data = await todoService.getAllStatuses();
   res.jsend.success({ statusCode: 200, result: data });
 });
 
 // Change/update a specific todo for logged in user
 router.put('/:id', isAuth, async (req, res, next) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Change/update a specific todo for logged in user'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[201,400]
+  /* #swagger.parameters['body']={
+    "name":"body",
+    "in":"body",
+    "schema":{
+      $ref:"#/definitions/TodosUpdate"
+    }
+  }
+
+  */
   const { id: UserId } = res.locals.tokenData;
   const id = req.params.id;
   const { name, description, CategoryId, StatusId } = req.body;
@@ -71,6 +116,10 @@ router.put('/:id', isAuth, async (req, res, next) => {
 
 // Delete a specific todo if for the logged in user
 router.delete('/:id', isAuth, async (req, res) => {
+  // #swagger.tags = ['TODOs']
+  // #swagger.description = 'Delete a specific todo if for the logged in user'
+  // #swagger.produces = ['text/json']
+  // #swagger.responses=[200]
   const id = req.params.id;
   await todoService.updateDeleteTodo(id);
   res.jsend.success({ statusCode: 200, result: 'Todo deleted' });
